--- a/.classpath
+++ b/.classpath
@@ -19,6 +19,6 @@
 			<attribute name="owner.project.facets" value="jst.web.jstl"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/软件/常用软件1/安装包/t12.028.jar"/>
+	<classpathentry kind="lib" path="D:/运维测试/软件/t12.0475.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
